[project] :memo: Convert Javadocs to Markdown
Signed-off-by: palexdev <alessandro.parisi406@gmail.com>