@@ -18,15 +18,6 @@
 
 package io.github.palexdev.mfxcore.utils.loader;
 
-import io.github.palexdev.mfxcore.base.properties.functional.SupplierProperty;
-import io.github.palexdev.mfxcore.enums.LoaderCacheLevel;
-import javafx.fxml.FXMLLoader;
-import javafx.scene.CacheHint;
-import javafx.scene.Parent;
-import javafx.scene.Scene;
-import javafx.scene.layout.StackPane;
-import javafx.util.Callback;
-
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.LinkedHashMap;
@@ -39,35 +30,40 @@ import java.util.concurrent.Future;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
-/**
- * Convenience class for creating dashboards, no more hassle on managing multiple views.
- * <p>
- * This control makes use of {@link LoaderUtils} and it's capable of loading multiple FXML views with {@link ExecutorService}s.
- * <p>
- * The information about a view are stored in bean classes, {@link MFXLoaderBean}. Those can be added to this loader
- * by using the various "addView(...)" methods, and will be stored in a {@code Map}, every bean is associated to a {@code String},
- * which should be the identifier of the view, you can also use {@link LoaderUtils#generateKey(URL)} to automatically generate a key.
- * <p></p>
- * Once every view has been added you can start the loader with either {@link #start()} or {@link #startWith(ExecutorService)}.
- * <p>
- * After all views have been loaded the {@link #onLoaded(List)} method is called, see also {@link #setOnLoadedAction(Consumer)}.
- * <p></p>
- * This loader has two other notable features:
- * <p> 1) To load FXML files it uses a {@link FXMLLoader} of course. But, in some cases (like DI framework) you want to use
- * a specific {@link FXMLLoader}, so the loader creates them with a {@link Supplier}, see {@link #fxmlLoaderSupplierProperty()}.
- * The default supplier is just "FXMLLoader::new", but you can easily change that if you need to.
- * <p> 2) To make the views ready for switching the loader can "preload" them (compute both CSS and Layout), you can
- * manage this behavior by setting the "cache level", see {@link #setCacheLevel(LoaderCacheLevel)} and {@link LoaderCacheLevel}
- * <p>
- * <b>NOTE: the cache level must be set before invoking the {@link #start()} method.</b>
- * <p>
- * By default, it is set to: {@link LoaderCacheLevel#SCENE_CACHE}
- *
- * @see LoaderUtils
- * @see MFXLoaderBean
- */
+import io.github.palexdev.mfxcore.base.properties.functional.SupplierProperty;
+import io.github.palexdev.mfxcore.enums.LoaderCacheLevel;
+import javafx.fxml.FXMLLoader;
+import javafx.scene.CacheHint;
+import javafx.scene.Parent;
+import javafx.scene.Scene;
+import javafx.scene.layout.StackPane;
+import javafx.util.Callback;
+
+/// Convenience class for creating dashboards, no more hassle on managing multiple views.
+///
+/// This control makes use of [LoaderUtils] and it's capable of loading multiple FXML views with [ExecutorServices][ExecutorService].
+///
+/// Infos about a view are stored in bean classes, [MFXLoaderBean]. Those can be added to this loader by using the various
+/// "addView(...)" methods, and will be stored in a `Map`, every bean is associated to a `String`,
+/// which should be the identifier of the view, you can also use [LoaderUtils#generateKey(URL)] to automatically generate a key.
+///
+/// Once every view has been added, you can start the loader with either [#start()] or [#startWith(ExecutorService)].
+///
+/// After all views have been loaded, the [#onLoaded(List)] method is called, see also [#setOnLoadedAction(Consumer)].
+///
+/// This loader has two other notable features:
+///  1) To load FXML files, it uses a [FXMLLoader] of course. But, in some cases (like DI framework) you want to use
+/// a specific [FXMLLoader], so the loader creates them with a [Supplier], see [#fxmlLoaderSupplierProperty()].
+/// The default supplier is just "FXMLLoader::new", but you can easily change that if you need to.
+///  2) To make the views ready for switching the loader can "preload" them (compute both CSS and Layout), you can
+/// manage this behavior by setting the "cache level", see [#setCacheLevel(LoaderCacheLevel)] and [LoaderCacheLevel]
+///
+/// **NOTE: the cache level must be set before invoking the [#start()] method.**
+/// By default, it is set to: [LoaderCacheLevel#SCENE_CACHE]
+///
+/// @see LoaderUtils
+/// @see MFXLoaderBean
 public class MFXLoader {
     //================================================================================
     // Properties
@@ -102,22 +98,18 @@ public class MFXLoader {
     // Methods
     //================================================================================
 
-    /**
-     * Starts the loading process by collecting all the views from the map
-     * that are still not loaded. Then for each {@link MFXLoaderBean} builds
-     * the {@link Callable} used to load the FXML root, see {@link #buildTask(MFXLoaderBean)},
-     * and sends it to the {@link LoaderUtils}'s executor, to load the view uses
-     * {@link Future#get()}.
-     * Once the fxml has been loaded invokes {@link #cacheParent(Parent)} then finally
-     * increments the number that keeps track of how many views have been loaded.
-     * <p>
-     * At the end of the loop calls {@link #onLoaded(List)}, the list
-     * is given by {@link Map#values()} (wrapped in an ArrayList).
-     */
+    /// Starts the loading process by collecting all the views from the map that are still not loaded.
+    /// Then for each [MFXLoaderBean], builds the [Callable] used to load the FXML root, see [#buildTask(MFXLoaderBean)],
+    /// and sends it to the [LoaderUtils]'s executor, to load the view uses [Future#get()].
+    ///
+    /// Once the fxml has been loaded, invokes [#cacheParent(Parent)] and finally increments the number that keeps track
+    /// of how many views have been loaded.
+    ///
+    /// At the end of the loop calls [#onLoaded(List)], the list is given by [Map#values()].
     public void start() {
         List<MFXLoaderBean> toLoad = viewMap.values().stream()
             .filter(bean -> !bean.isLoaded())
-            .collect(Collectors.toList());
+            .toList();
         for (MFXLoaderBean bean : toLoad) {
             try {
                 Callable<Parent> task = buildTask(bean);
@@ -134,14 +126,11 @@ public class MFXLoader {
         onLoaded(new ArrayList<>(viewMap.values()));
     }
 
-    /**
-     * Same as {@link #start()} but the load tasks are submitted to the given
-     * {@link ExecutorService}.
-     */
+    /// Same as [#start()] but the load tasks are submitted to the given [ExecutorService].
     public void startWith(ExecutorService executorService) {
         List<MFXLoaderBean> toLoad = viewMap.values().stream()
             .filter(bean -> !bean.isLoaded())
-            .collect(Collectors.toList());
+            .toList();
         for (MFXLoaderBean bean : toLoad) {
             try {
                 Callable<Parent> task = buildTask(bean);
@@ -158,63 +147,50 @@ public class MFXLoader {
         onLoaded(new ArrayList<>(viewMap.values()));
     }
 
-    /**
-     * Adds the given view to the views map.
-     */
+    /// Adds the given view to the views' map.
     public MFXLoader addView(MFXLoaderBean bean) {
         LoaderUtils.checkFxmlFile(bean.getFxmlFile());
         viewMap.put(bean.getViewName(), bean);
         return this;
     }
 
-    /**
-     * Builds a new {@link MFXLoaderBean} with the given identifier and FXML file,
-     * then adds it to the views map.
-     */
+    /// Builds a new [MFXLoaderBean] with the given identifier and FXML file, then adds it to the view map.
     public MFXLoader addView(String viewName, URL fxmlFile) {
         LoaderUtils.checkFxmlFile(fxmlFile);
         viewMap.put(viewName, new MFXLoaderBean(viewName, fxmlFile));
         return this;
     }
 
-    /**
-     * Builds a new {@link MFXLoaderBean} with the given identifier, FXML file and
-     * controller factory, then adds it to the views map.
-     */
+    /// Builds a new [MFXLoaderBean] with the given identifier, FXML file and controller factory,
+    /// then adds it to the views' map.
     public MFXLoader addView(String viewName, URL fxmlFile, Callback<Class<?>, Object> controllerFactory) {
         LoaderUtils.checkFxmlFile(fxmlFile);
         viewMap.put(viewName, new MFXLoaderBean(viewName, fxmlFile, controllerFactory, false, null));
         return this;
     }
 
-    /**
-     * @return a view for the given identifier, or null if no view is found
-     */
+    /// @return a view for the given identifier, or null if no view is found
     public MFXLoaderBean getView(String viewName) {
         return viewMap.getOrDefault(viewName, null);
     }
 
-    /**
-     * This method is called once all the views have been loaded by {@link #start()} or
-     * {@link #startWith(ExecutorService)}.
-     * <p>
-     * This simple methods is just responsible for executing the action specified by the user, {@link #setOnLoadedAction(Consumer)},
-     * if not null.
-     */
+    /// This method is called once all the views have been loaded by [#start()] or
+    /// [#startWith(ExecutorService)].
+    ///
+    /// This simple method is just responsible for executing the action specified by the user, [#setOnLoadedAction(Consumer)],
+    /// if not null.
     protected void onLoaded(List<MFXLoaderBean> beans) {
         if (onLoadedAction != null) {
             onLoadedAction.accept(beans);
         }
     }
 
-    /**
-     * Responsible for building the {@link Callable} which will load the given view.
-     * <p>
-     * First a {@link FXMLLoader} is created by using the specified supplier, {@link #fxmlLoaderSupplierProperty()},
-     * then the location and controller factory are set on it.
-     * <p>
-     * {@link FXMLLoader#load()} is invoked and then the loaded {@link Parent} is set in the bean.
-     */
+    /// Responsible for building the [Callable] which will load the given view.
+    ///
+    /// First a [FXMLLoader] is created by using the specified supplier, [#fxmlLoaderSupplierProperty()],
+    /// then the location and controller factory are set on it.
+    ///
+    /// [FXMLLoader#load()] is invoked, and then the loaded [Parent] is set in the bean.
     private Callable<Parent> buildTask(MFXLoaderBean bean) {
         List<Callable<Parent>> tasks = new ArrayList<>();
         return () -> {
@@ -230,13 +206,10 @@ public class MFXLoader {
         };
     }
 
-    /**
-     * This method is responsible for caching/preloading the loaded views to make them
-     * ready for switching.
-     * For a description of the various cache levels, see {@link LoaderCacheLevel}.
-     * <p>
-     * If the cache level is set to {@link LoaderCacheLevel#NONE} exits immediately.
-     */
+    /// This method is responsible for caching/preloading the loaded views to make them ready for switching.
+    /// For a description of the various cache levels, see [LoaderCacheLevel].
+    ///
+    /// If the cache level is set to [#NONE] exits immediately.
     private void cacheParent(Parent parent) {
         if (cacheLevel == LoaderCacheLevel.NONE) return;
 
@@ -259,9 +232,7 @@ public class MFXLoader {
         return fxmlLoaderSupplier.get();
     }
 
-    /**
-     * Specifies the {@link Supplier} used to build a new {@link FXMLLoader} each time a view has to be loaded.
-     */
+    /// Specifies the [Supplier] used to build a new [FXMLLoader] each time a view has to be loaded.
     public SupplierProperty<FXMLLoader> fxmlLoaderSupplierProperty() {
         return fxmlLoaderSupplier;
     }
@@ -275,11 +246,9 @@ public class MFXLoader {
         return onLoadedAction;
     }
 
-    /**
-     * Sets the action to perform once all the views have been loaded.
-     * <p>
-     * The action is a {@link Consumer} which carries the list fo loaded views.
-     */
+    /// Sets the action to perform once all the views have been loaded.
+    ///
+    /// The action is a [Consumer] which carries the list for loaded views.
     public MFXLoader setOnLoadedAction(Consumer<List<MFXLoaderBean>> onLoadedAction) {
         this.onLoadedAction = onLoadedAction;
         return this;
@@ -289,9 +258,7 @@ public class MFXLoader {
         return cacheLevel;
     }
 
-    /**
-     * Sets the {@link LoaderCacheLevel} for this loader.
-     */
+    /// Sets the [LoaderCacheLevel] for this loader.
     public MFXLoader setCacheLevel(LoaderCacheLevel cacheLevel) {
         this.cacheLevel = cacheLevel;
         return this;
